--- a/desafio10/android.html
+++ b/desafio10/android.html
@@ -19,7 +19,7 @@
         <a href="#">Notícias</a> <!--menu (links)-->
         <a href="#">Curiosidades</a> <!--menu (links)-->
         <a href="#">Fale Conosco</a> <!--menu (links)-->
-    </nav>
+    </nav><!--menu de navegação-->
 
     <main><!--conteudo principal-->
         <article><!--artigo-->
@@ -35,7 +35,7 @@
             <picture>
                 <source media="(max-width: 670px)" srcset="imagens/dan-droids-pq.png">
                 <img src="imagens/dan-droids.png" alt="Primeiro mascote do Android">
-            </picture><!--essa config dentro de picture abre uma imagem menor quando a tela do dispoositivo for muito pequena-->
+            </picture><!--essa config dentro de picture abre uma imagem menor quando a tela do dispositivo for muito pequena-->
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
 
@@ -65,7 +65,7 @@
                 <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
                 
                 <ul><!--inserir lista-->
-                    <li>1.5 - <abbr title="Bolo de copo">Cupcake</abbr></li>
+                    <li>1.5 - <abbr title="Bolo de copo">Cupcake</abbr></li><!--'abbr' quando para o mouse em cima da palavra traduz-->
                     <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
                     <li>3.0 - <abbr title="Bomba">Eclair</abbr></li>
                     <li>2.2 - <abbr title="Iogurte Congelado">Froyo</abbr></li>
