--- a/exercicios/ex022 colocando imgs dentro das DIVs caixas/fundo001.html
+++ b/exercicios/ex022 colocando imgs dentro das DIVs caixas/fundo001.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="quadrado" id="q1"><!--aqui add uma div na config dela deixei um quadrado-->
-        <h1>vida longa ao rei</h1>
+        <h1>vida longa ao rei</h1><!--esse h1 esta dentro da DIV-->
     </div>
     <div class="quadrado" id="q2"><!--aqui add uma div na config dela deixei um quadrado-->
         <h1>porque ele merece</h1>
