--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -12,6 +12,7 @@
 
         table {
             width: 400px; /*largura da minha tabela*/
+            height: 400px;/*altura da minha tabela*/
             border-collapse: collapse;/*tirar os espaços entre os dados*/
          
         }
@@ -19,6 +20,8 @@
         td {
             border: 1px solid black;/*inserir bordas em volta de todos os dados*/
             padding: 8px;/*distancia dos dados para as linhas*/
+            text-align: center;/*alinhamento do texto left right e center*/
+            /*vertical-align: middle top bottom; aqui são as propriedades de alinhamento vcertical*/
         }
 
     </style>
