--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -35,6 +35,10 @@
         td.num {
             text-align: right;
         }
+
+        th.coluna {
+            width: 50px;
+        }
     </style>
 </head>
 <body>
@@ -56,7 +60,7 @@
                  <tr>
                     <th scope="col">Posição</th>
                     <th scope="col">Estado</th>
-                    <th scope="col">população</th>     
+                    <th class="coluna" scope="col">população</th>     
                 </tr>
             </thead>
             <tbody>
