--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -32,6 +32,10 @@
             color: white;
         }
 
+        tbody > tr:nth-child(2n) {/*2n significa de 2 em 2 efeito zebrado ao inves de usar 2n posso usar odd=impa ou even=par*/
+            background-color: lightgray;
+        }
+
         td.num {
             text-align: right;
         }
