--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercícios Tabelas</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            }
+            
+            table {
+                width: 500px;
+                border-collapse: collapse;
+            }
+
+            caption {
+                font-size: 1.3em;
+                font-weight: bolder;
+                padding: 8px;
+            }
+
+            th, td {
+                border: 1px solid black;
+                padding: 8px;
+            }
+
+            col.cnome, col.cidade {
+                background-color: chartreuse;
+            }
+    </style>
 </head>
 <body>
-    
+    <h1>Exercícios Tabelas</h1>
+    <table>
+        <colgroup>
+            <col class="cnome">
+            <col class="csexo">
+            <col class="cidade" span="2"><!-- span de espansão para colunas-->
+            <col class="cprof">
+        </colgroup>
+        <thead>
+            <caption>Cadastro</caption>
+            <tr>
+                <th scope="col">Nome</th>
+                <th scope="col">Sexo</th>
+                <th scope="col">Idade</th>
+                <th scope="col">Profissão</th>
+            </tr>
+        </thead>
+        <tboby>
+            <tr>
+                <td>Ana Maria</td>
+                <td>F</td>
+                <td>25</td>
+                <td>Jornalista</td>
+            </tr>
+            <tr>
+                <td>Marcos</td>
+                <td>M</td>
+                <td>31</td>
+                <td>Lojista</td>
+            </tr>
+            <tr>
+                <td>Maria Clara</td>
+                <td>F</td>
+                <td>19</td>
+                <td>Paraquedista</td>
+            </tr>
+            <tr>
+                <td>Henry</td>
+                <td>M</td>
+                <td>38</td>
+                <td>Programador</td>
+            </tr>
+            <tr>
+                <td>Marcelo</td>
+                <td>M</td>
+                <td>48</td>
+                <td>Empresario</td>
+            </tr>
+            <tr>
+                <td>Jonh</td>
+                <td>M</td>
+                <td>13</td>
+                <td>Gamer</td>
+            </tr>
+        </tboby>
+    </table>
 </body>
 </html>
