--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -5,14 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe {
+            width: 400px;/*largura*/
+            height: 200px;/*altura*/
+            border: 2px solid blue;/*borda espessura, estilo e cor*/
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <p>acessando o site do 
+    <p> 
     
      <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>   
 
     para aprender a programar</p>
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> também é muito legal</p>
+
+    <p>
+        
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0"></iframe>
+        também é bem legal
+    </p>
 </body>
 </html>
