--- a/exercicios/mah brisas/index.html
+++ b/exercicios/mah brisas/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Massashi</title>
     <link rel="shortcut icon" href="glock.jpg" type="image/x-icon">
-    <style>
+    <link rel="stylesheet" href="style.css">
+    <!--<style>
+        @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
         @font-face {
             font-family: top;
             src: url('fonts/Gimme\ Danger.ttf') format('truetype');
-        }
+            }
         /*
         Tipos de format()
         - opentype (otf)
@@ -27,11 +29,16 @@
             font-family:'top', Times, serif;
             font-size: 3em;
         }
-    </style>
+
+        p {
+            font-family:Satisfy, Helvetica, sans-serif;
+        }
+    </style>-->
     
 </head>
 <body>
     <h1>site do mah</h1>
-    <p>Ja começamu na topezera <hr> da um liga na glock la na aba <hr>bagui eh doido</p>
+    <p>Ja começamu na topezera da um liga na glock la na aba bagui eh doido Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque veniam quo iste soluta, id eveniet aliquid voluptate saepe beatae corrupti ducimus cum placeat debitis, itaque animi sunt atque. Hic, omnis?
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis minus sint ad dolor esse labore tenetur fuga eligendi quam tempore? Recusandae vitae consequatur maiores ipsa amet, quos quo facere unde!</p>
 </body>
 </html>
