--- a/exercicios/ex002 quebra de texto, simbulos e emojis/index.html
+++ b/exercicios/ex002 quebra de texto, simbulos e emojis/index.html
@@ -9,7 +9,8 @@
     <body>
         <h1>Paragrafos e quebras de linhas</h1>
         <hr>
-        <p>você pode escrever um paragrafo de qualquer jeito. Basta colocar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt;</p><!--LESS THAN / GREATER THAN (MENOR QUE / MAIOR QUE)--> 
+        <p>você pode escrever um paragrafo de qualquer jeito. Basta colocar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt;</p>
+        <!--LESS THAN / GREATER THAN (MENOR QUE / MAIOR QUE)--> 
         <p>Se precisar quebrar o texto em algum lugar específico <br> como esse, você pode usar a tag &lt;br&gt; </p> 
         <p>para se ter mais espaço na quebra de texto asim oh <br><br><br><br><br><br> não usa um monte de br ok isso é errado (USA SE O CSS)
         </p>
@@ -19,7 +20,8 @@
             &copy;<br><!--simbolo copy right-->
             &trade;<br><!--trade mark (marca resgistrada)-->
         &euro;<br>&pound;<br>&yen;<br>&cent;<br>&delta;<br>&Delta;<br>&uarr;
-        <p>vamos adicionar alguns emoji</p><br><p>enta no site emojipedia acha o emoji desejado, seleciona e vai ateh quase no final e escxreve o codigo se esquecer de antes colocar &#x + codigo blz?</p>
+        <p>vamos adicionar alguns emoji</p><br><p>enta no site emojipedia acha o emoji desejado, seleciona e vai ateh quase no 
+            final e escxreve o codigo se esquecer de antes colocar &#x + codigo blz?</p>
         <p>nesse caso abaixo o codigo era U+1F60E </p>
         &#x1F60E;<p>esse é o carinha com oculos</p> 
         🤣<br>
