--- a/exercicios/ex002 quebra de texto, simbulos e emojis/index.html
+++ b/exercicios/ex002 quebra de texto, simbulos e emojis/index.html
@@ -21,7 +21,7 @@
             &trade;<br><!--trade mark (marca resgistrada)-->
         &euro;<br>&pound;<br>&yen;<br>&cent;<br>&delta;<br>&Delta;<br>&uarr;
         <p>vamos adicionar alguns emoji</p><br><p>enta no site emojipedia acha o emoji desejado, seleciona e vai ateh quase no 
-            final e escxreve o codigo se esquecer de antes colocar &#x + codigo blz?</p>
+            final e escreve o codigo sem esquecer de antes colocar &#x + codigo blz?</p>
         <p>nesse caso abaixo o codigo era U+1F60E </p>
         &#x1F60E;<p>esse é o carinha com oculos</p> 
         🤣<br>
