--- a/exercicios/ex007 usando a tag adress (eu acho)/index.html
+++ b/exercicios/ex007 usando a tag adress (eu acho)/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>exemplo de Semantica</title>
         <style> 
-        body {background-color: rgb(46, 46, 172);
-
+        body {
+            background-color: rgb(102, 102, 241);
+            h1 {color: white;}     
+            p { color: white;}
+            address { color: white;}
         }
+        
         </style>
     </head>
     <body>
