--- a/exercicios/ex008b/index.html
+++ b/exercicios/ex008b/index.html
@@ -10,13 +10,15 @@
     <body>
         <h1>Outras formatações</h1>
         <h2>Codigo fonte / Pré-formatação</h2>
-        <p>O comando document.getElementById('teste') é escrito em linghuagem JavaScript.</p><!--repare no tamanho que o T ocupa de espaço e repare no l-->
+        <p>O comando document.getElementById('teste') é escrito em 
+            linguagem JavaScript.</p><!--repare no tamanho que o T ocupa de espaço e repare no l-->
 
-        <p>O comando <code>document.getElementById('teste')</code> é escrito em linghuagem JavaScript.</p> <!--code= fonte monoespaçada todos os caracteres ficam com o mesmo tamanho-->
+        <p>O comando <code>document.getElementById('teste')</code> é escrito em 
+            linguagem JavaScript.</p> <!--code= fonte monoespaçada todos os caracteres ficam com o mesmo tamanho-->
 
         <pre>
             <code>
-                num = int(input)('Digite um numero'))
+                num = int(input)('Digite um numero')
                 if num % 2 ==0:
                     print(f*0 numero {num} é par)
                 else:
@@ -37,7 +39,8 @@
 
         </blockquote>
         <h2>Abreviações</h2>
-        <p>Estou estudando <abbr title="Hyper Text Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>. Estou adorando</p>
+        <p>Estou estudando <abbr title="Hyper Text Markup Language">HTML</abbr> e 
+            <abbr title="Cascading Style Sheets">CSS</abbr>. Estou adorando</p>
 
         <h2>Texto invertido</h2>
         <p><bdo dir="rtl">Eu sou um cara muito bom</bdo></p>
